--- a/app/globals.css
+++ b/app/globals.css
@@ -23,7 +23,7 @@
   --color-brand-primary-300: #ffed41;
   --color-brand-primary-200: #fff986;
   --color-brand-primary-100: #fffec1;
-  --color-brand-primary-50: #fffef7;
+  --color-brand-primary-50: #e6eaef;
 
   --color-brand-secondary-900: #000509;
   --color-brand-secondary-800: #001125;
@@ -48,4 +48,9 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: var(--font-sans);
+}
+
+::selection {
+  background-color: var(--color-brand-secondary-500);
+  color: #f9fafb;
 }
