--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700;800&display=swap");
 @import "tailwindcss";
 
 :root {
@@ -48,6 +49,15 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: var(--font-sans);
+}
+
+.plus-jakarta {
+  font-family: "Plus Jakarta Sans", sans-serif;
+}
+
+.custom-shadow {
+  box-shadow: -8px -4px 32px 0px rgba(0, 0, 0, 0.08),
+    40px 28px 80px 0px rgba(0, 0, 0, 0.08);
 }
 
 ::selection {
